# parrot

./: .dockerignore  Cargo.toml  Dockerfile  entrypoint.sh  rust-toolchain.toml
.github/workflows/: build.yml  ci_workflow.yml  lint.yml
src/: client.rs  errors.rs  utils.rs
src/commands/: clear.rs  leave.rs  now_playing.rs  pause.rs  play.rs  queue.rs  remove.rs  repeat.rs  resume.rs  seek.rs  skip.rs  stop.rs  summon.rs  voteskip.rs
src/guild/: http_client.rs  metadata_store.rs  mod.rs  settings.rs  stored_queue.rs
src/handlers/: idle.rs  serenity.rs  track_end.rs
src/messaging/: messages.rs
src/sources/: spotify.rs
src/test/: errors.rs
