[package]
name = "parrot"
version = "1.6.0"
authors = ["aquelemiguel"]
edition = "2024"
description = "A Discord music bot built in Rust"
repository = "https://github.com/aquelemiguel/parrot"
license = "MIT"
keywords = ["discord", "music-bot", "rust"]
rust-version = "1.93.0"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.5"
rspotify = "0.14.0"
serde_json = "1.0.79"
url = "2.3.1"
serde = "1.0.152"
reqwest = "0.12"
davey = "0.1.2"
rustls = "0.23.37"
aws-lc-rs = "1.16.1"

[dependencies.songbird]
# version = "0.5"
git = "https://github.com/beerpsi-forks/songbird"
branch = "davey"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.12.5"
default-features = false
features = [
  "builder",
  "cache",
  "collector",
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "unstable_discord_api",
  "voice",
]

[dependencies.tokio]
version = "1.43.0"
features = ["macros", "rt-multi-thread"]

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]
